added some contnent

--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,26 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
-  <title>ProjectNikOscar</title>
   <base href="/">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#1976d2">
+  <title>Project Nik Oscar</title>
+  <meta name="keywords" content="nikhilnayyar ,nikhilnayyar002, nik_oscar, nik oscar, nikoscar">
+  <meta name="author" content="Nikhil Nayyar">
+  <meta name="description" content="Web app build to share work and ideas between people. Love to Oscar.">
+  <meta property="og:title" content="Nikhil Nayyar - Web Developer / Designer" />
+  <meta property="og:image" itemprop="image" content="https://avatars1.githubusercontent.com/u/38173563?s=250&v=4">
+  <meta property="og:site-name" content="nikoscar.web.app">
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://nikoscar.web.app" />
+  <meta property="og:description"
+      content="Web app build to share work and ideas between people. Love to Oscar." />
+  <meta name="twitter:site" content="@nikhilnayyar002">
+  <meta name="twitter:creator" content="@nikhilnayyar002">
+  <meta name="twitter:description" content="Web app build to share work and ideas between people. Love to Oscar.">
 </head>
 <body>
 	<div id="container">
